LS-2163 - wrapping up 1.18.0 release.